Almost Ready the View

--- a/source/GradBook/src/main/resources/Bundle_pt_BR.properties
+++ b/source/GradBook/src/main/resources/Bundle_pt_BR.properties
@@ -15,6 +15,16 @@ field_required=Campo obrigatório
 
 #atributes
 
+#pole
+collaborator=Colaborador
+collaborators=Colaboradores
+name_collaborator=Nome do Colaborador
+insert_name_collaborator=Digite o nome do Colaborador
+cpf_collaborator=CPF do Colaborador
+insert_cpf_collaborator=Digite o CPF do Colaborador
+list_collaborator=Lista de Colaboradore
+show_collaborator=Ver Colaboradores
+
 #course
 course=Curso
 courses=Cursos
@@ -27,14 +37,13 @@ list_course=Lista de Cursos
 show_courses=Ver Cursos
 
 
-#semester
-semester=Semestre
-semesters=Semestres
-name_semester=Nome do Semestre
-insert_name_semester=Digite o nome do Semestre
-list_semester=Lista de Semestres
-show_semesters=Ver Semesteres
-choice_semester=Escolha o Semestre
+#function
+function=Função
+functions=Funções
+name_function=Nome da Função
+insert_name_function=Digite o nome da Função
+list_function=Lista de Funções
+show_function=Ver Funções
 
 #pole
 pole=Polo
@@ -44,11 +53,22 @@ insert_name_pole=Digite o nome do Polo
 list_pole=Lista de Polos
 show_poles=Ver Polos
 
+#semester
+semester=Semestre
+semesters=Semestres
+name_semester=Nome do Semestre
+insert_name_semester=Digite o nome do Semestre
+list_semester=Lista de Semestres
+show_semesters=Ver Semesteres
+choice_semester=Escolha o Semestre
+
+
+
 #discipline
 discipline=Disciplina
 disciplines=Disciplinas
 name_discipline=Nome da Disciplina
-work_load_discipline=Carga horária da Disciplina
+work_load_discipline=Carga horária
 insert_name_discipline=Digite o nome da Disciplina
 insert_work_load_discipline=Digite a Carga horária da Disciplina
 list_discipline=Lista de Disciplinas
@@ -89,7 +109,9 @@ option=Opção
 options=Opções
 
 register=Cadastros
+register_collaborator=Cadastro de Colaboradores
 register_course=Cadastro de Curso
+register_funtions=Cadastro de Funções
 register_discipline=Cadastro de Disciplina
 register_pole=Cadastro de Polo
 register_semester=Cadastro de Semestre
