Almost ready, it is missing just the Task View pages

--- a/source/GradBook/src/main/resources/Bundle_pt_BR.properties
+++ b/source/GradBook/src/main/resources/Bundle_pt_BR.properties
@@ -52,6 +52,7 @@ name_pole=Nome do Polo
 insert_name_pole=Digite o nome do Polo
 list_pole=Lista de Polos
 show_poles=Ver Polos
+choice_pole=Escolha o Polo
 
 #semester
 semester=Semestre
@@ -74,8 +75,26 @@ insert_work_load_discipline=Digite a Carga horária da Disciplina
 list_discipline=Lista de Disciplinas
 show_disciplines=Ver Disciplinas
 
+#team
+team=Turma
+teams=Turmas
+name_team=Nome da Turma
+insert_name_team=Digite o nome da Turma
+list_team=Lista de Turmas
+show_team=Ver Turmas
+
+task=Atividade
+tasks=Atividades
+date_start_task=Data de Inicio da Atividade
+insert_date_start_task=Informe a data de Inicio
+date_end_task=Data de Funalização da Atividade
+insert_date_end_task=Informe a data de finalização
+list_task=Lista de Atividades
+show_task=Ver Atividades
+
+
 #operations CRUD
-create=Novo
+create=Novo(a)
 delete=Excluir
 edit=Editar
 
@@ -110,11 +129,12 @@ options=Opções
 
 register=Cadastros
 register_collaborator=Cadastro de Colaboradores
-register_course=Cadastro de Curso
+register_course=Cadastro de Cursos
 register_funtions=Cadastro de Funções
-register_discipline=Cadastro de Disciplina
-register_pole=Cadastro de Polo
-register_semester=Cadastro de Semestre
+register_discipline=Cadastro de Disciplinas
+register_team=Cadastro de Turmas
+register_pole=Cadastro de Polos
+register_semester=Cadastro de Semestres
 
 
 the=o(a)
