Crud Task Almost Ready

--- a/source/GradBook/src/main/resources/Bundle_pt_BR.properties
+++ b/source/GradBook/src/main/resources/Bundle_pt_BR.properties
@@ -23,6 +23,7 @@ insert_name_collaborator=Digite o nome do Colaborador
 cpf_collaborator=CPF do Colaborador
 insert_cpf_collaborator=Digite o CPF do Colaborador
 list_collaborator=Lista de Colaboradore
+choice_collaborator=Selecione o Colaborador
 show_collaborator=Ver Colaboradores
 
 #course
@@ -44,6 +45,7 @@ name_function=Nome da Função
 insert_name_function=Digite o nome da Função
 list_function=Lista de Funções
 show_function=Ver Funções
+choice_function=Selecione a função
 
 #pole
 pole=Polo
@@ -74,6 +76,7 @@ insert_name_discipline=Digite o nome da Disciplina
 insert_work_load_discipline=Digite a Carga horária da Disciplina
 list_discipline=Lista de Disciplinas
 show_disciplines=Ver Disciplinas
+choice_discipline=Escolha a Disciplina
 
 #team
 team=Turma
